Edited wording of header

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
+        <link rel = "stylesheet" type = "text/css" href = "styles.css"/>
         <title>Mike's Amazing Webpage</title>
     </head>
     <body>
@@ -8,14 +9,14 @@
             <article>
                 <header> 
                     <h1>Welcome to Mike's Amazing Webpage</h1>
-                    <p>Below you can find out about a few of Mike's various hobbies</p>
+                    <p>Find out a few of Mike's various hobbies</p>
                 </header>
             </article>
 
             <article>
-                <h2>Sports</h2>
+                <h2 class="rounded">Sports</h2>
                 <a href="https://www.youtube.com/watch?v=CEVdca9U9LM"><img src="images/WeLikeSports.gif"/></a>
-                <p>Playing any kind of sport is by far my favorite kind of activity.  I love being able to compete against someone else
+                <p class="info">Playing any kind of sport is by far my favorite kind of activity.  I love being able to compete against someone else
                  and it is a great way to stay in shape.  It's difficult to say which is my absolute favorite to play, but I've listed
                  some of the ones I've played recently.</p>
                 <ul>
@@ -28,25 +29,25 @@
             </article>
 
             <article>
-                <h2>Video Games</h2>
+                <h2 class="rounded">Video Games</h2>
                 <img src="images/VideoGameHeart.jpg"/>
-                <p>Another fun hobby of mine is playing video games.  Some of my fondest memories growing up were sitting down in front of the TV
+                <p class="info">Another fun hobby of mine is playing video games.  Some of my fondest memories growing up were sitting down in front of the TV
                 with my sisters to play, whether we were taking turns trying to take down Bowser in the original Super Mario Bros at a very young
                 age or competing against each other and having tons of laughs with Mario Party and Mario Kart as teenagers.  I don't play them nearly
                 as much as I used to ask a kid but I still find time to get some gaming sessions in every so often.  Some of my all-time favorites
                 are below.</p>
                 <ul>
-                    <li>The Legend of Zelda series</li>
-                    <li>The Last Of Us</li>
-                    <li>Super Mario 64</li>
-                    <li>Goldeneye</li>
+                    <li id="Zelda">The Legend of Zelda series</li>
+                    <li id="Last">The Last Of Us</li>
+                    <li id="Mario">Super Mario 64</li>
+                    <li id="Golden">Goldeneye</li>
                 </ul>
             </article>
 
             <article>
-                <h2>Playing guitar</h2>
+                <h2 class="rounded">Playing guitar</h2>
                 <a href="https://www.youtube.com/watch?v=_-7toYWFEyk"><img src="images/HendrixGuitarFire.gif"/></a>
-                <p>The last hobby of mine that I'll mention here is learning how to play guitar.  Nearly everyone in my family knows how to played
+                <p class="info">The last hobby of mine that I'll mention here is learning how to play guitar.  Nearly everyone in my family knows how to played
                 some type of musical instrument, but I never had much interest in learning as a child.  I've always loved listening to different
                 kinds of music and reading about the stories behind how artists / bands got started.  In my college days, I read about one the bands
                 I listened to frequently and how they taught themselves to play without being in a school band or taking lessons.  This inspired me
